2004-06-25 01:33 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: [GormDocument(GormOutlineDataSource)
	outlineView:setObjectValue:forTableColumn:byItem:] added
	code to ignore the value which comes if it is nil.  This 
	corrects a recent problem caused by a "fix" in gui's
	NSTableView.
	* GormClassInspector.m: Changes to allow the user to change
	the class name when it's a custom class that's being edited.
	* GormClassInspector.gorm: Changes to facilitate the above
	modification.
	
2004-06-24 01:33 Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: [Gorm close:] the window is already released when
	the document is released and the code had an  
	"setReleasedWhenClosed" which was call which was causing
	an extra release and subsequently a core dump when selecting
	the "Close" item from the document menu.
	
2004-06-24 01:33 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Additions to [GormDocument attachObject:
	withParent:], [GormDocument loadDocument:], [GormDocument
	setupDefaults:] to move the main menu appropriately when
	it is either added to the documnent, loaded, or added when
	the user selects the "Application" type from the New menu.
	This helps alleviate confusion when editing the menu.
	
2004-06-22 23:33 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: A fix in  -[GormDocument pasteType:
        fromPasteboard: parent:] to retain objects unarchived
	from the pasteboard to prevent a recently discovered 
	segfault.

2004-06-21 23:33 Gregory John Casamento <greg_casamento@yahoo.com>

	* GModelDecoder.m: Added code to openGModel: to more automatically
	detect what actions should be added to FirstResponder.  This 
	facilitates importing the .gmodel without even needing the
	header file.  All of the information necessary to convert the 
	interface can be gleaned from the .gmodel information.
	
2004-06-18 23:40 Gregory John Casamento <greg_casamento@yahoo.com>

	* Version 0.7.7
	